--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -352,6 +352,7 @@ introduction
 }
 .introduction__size img {
     border: 3px solid var(--textBlack);
+    width: calc(100% - 6px);
 }
 .introduction__point {
     max-width: 1200px;
@@ -954,24 +955,19 @@ introduction
         padding: 60px 0;
     }
     .size__tags {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 20px;
-        margin: auto;
-        padding-top: 65px;
+        gap: 6px;
+        padding-top: 35px;
         padding-bottom: 33px;
     }
     .size__tags .tag {
-        width: 170px;
-        padding: 12px 0 14px 0;
-        background-color: #fff;
+        width: 110px;
+        padding: 4px 0 5px 0;
         border-radius: 50px;
-        text-align: center;
+        font-size: 13px;
     }
     .size__tags .tag.active {
-        border: 3px solid var(--textBlack);
-        background-color: var(--main-color);
+        border: 2px solid var(--textBlack);
+        width: 110px;
     }
     .introduction__size {
         max-width: 750px;
@@ -979,10 +975,11 @@ introduction
         margin: auto;
     }
     .introduction__size img {
-        border: 3px solid var(--textBlack);
+        border: 2px solid var(--textBlack);
+        width: calc(100% - 4px);
     }
     .introduction__point {
-        max-width: 1200px;
+        max-width: none;
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -1081,38 +1078,34 @@ introduction
         text-align: center;
     }
     .size__pagenation {
-        position: relative;
-        padding-top: 40px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 30px;
+        padding-top: 56px;
+        gap: 20px;
     }
     .size__pagenation .pagenation {
         position: relative;
-        width: 50px;
-        height: 50px;
+        width: 36px;
+        height: 36px;
         background-color: #fff;
         border-radius: 50%;
-        border: 3px solid var(--textBlack);
+        border: 2px solid var(--textBlack);
     }
     .size__pagenation .pagenation.next {
         background-color: var(--main-color);
     }
     .size__pagenation .pagenation.prev::before {
         content: url(../images/service/slide_arrow.svg);
-        width: 11px;
+        width: 7px;
         position: absolute;
-        top: 50%;
+        top: 56%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%) rotate(180deg);
         -webkit-transform: translateY(-50%) translateX(-50%) rotate(180deg);
     }
     .size__pagenation .pagenation.next::before {
         content: url(../images/service/slide_arrow.svg);
-        width: 11px;
+        width: 7px;
         position: absolute;
-        top: 50%;
+        top: 44%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
         -webkit-transform: translateY(-50%) translateX(-50%);
